<resources>
    <string name="app_name">RecipePad</string>
    <string name="recipepad">RecipePad</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password...</string>
    <string name="username">Username...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_signup_here">Don\'t have an account? Signup here</string>
    <string name="re_enter_password">Re-enter Password...</string>
    <string name="email">Email...</string>
    <string name="already_have_an_account_click_here">Already have an account? Click Here</string>
    <string name="home">Home</string>
    <string name="search_trending">Search/Trending</string>
    <string name="profile">Profile</string>
    <string name="trending">Trending</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="help_and_support">Help and Support</string>
    <string name="trending_recipes">Trending Recipes</string>
    <string name="search">Search...</string>
    <string name="upload_images">Upload Images</string>
    <string name="steps">Steps...</string>
    <string name="nutritional_facts">Nutritional Facts...</string>
    <string name="title">Title...</string>
    <string name="ingredients">Ingredients...</string>
    <string name="recipe_thumbnail">Recipe Thumbnail</string>
    <string name="login">Login</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="my_recipes">My Recipes</string>
    <string name="get_recipe">Get Recipe!</string>
    <string name="noTrending">No currently trending recipes!</string>
    <string name="noFollowingDefault">Follow users for their posts to appear here!</string>
    <string name="welcome">Welcome to RecipePad!</string>
    <string name="dish_description">Dish Description</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="steps_recipe">Steps</string>
    <string name="ingredients_recipe">Ingredients</string>
    <string name="comments"># Comments</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="likes"># Likes</string>
    <string name="dislikes"># Dislikes</string>
    <string name="follow_this_user">Follow This User</string>
    <string name="recipe_must_have_a_photo">All recipes must have a photo!</string>
    <string name="description">Description...</string>
    <string name="upload">Upload</string>
    <string name="add">Add</string>
    <string name="load_mock_data">Load Mock Data</string>
    <string name="mock_data_loaded">Mock recipes added!</string>
</resources>