<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF8F7"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_main_recipepad"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginVertical="40dp"
        android:background="#A1CFD9"
        android:gravity="center"
        android:text="@string/recipepad"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editText_main_username"
        android:layout_width="361dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="#AEAEAE"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#AEAEAE" />

    <EditText
        android:id="@+id/editText_main_password"
        android:layout_width="361dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="#AEAEAE"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:textColor="#AEAEAE" />

    <Button
        android:id="@+id/button_main_login"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_main_forgotpassword"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#1DA2BF" />

    <TextView
        android:id="@+id/textView_main_donthaveaccount"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/don_t_have_an_account_signup_here"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button_main_signup"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:onClick="signUp"
        android:text="@string/sign_up"
        android:textSize="20sp" />

</LinearLayout>