<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBF8F7"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/textView_signup_recipepad"
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:layout_marginVertical="40dp"
        android:background="#A1CFD9"
        android:gravity="center"
        android:text="@string/recipepad"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/editText_signup_username"
        android:layout_width="361dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="#AEAEAE"
        android:ems="10"
        android:inputType="text"
        android:text="@string/username"
        android:textColor="#AEAEAE" />

    <EditText
        android:id="@+id/editText_signup_email"
        android:layout_width="361dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="#AEAEAE"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#AEAEAE" />

    <EditText
        android:id="@+id/editText_signup_password"
        android:layout_width="361dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:backgroundTint="#AEAEAE"
        android:ems="10"
        android:inputType="text"
        android:text="@string/password"
        android:textColor="#AEAEAE" />

    <EditText
        android:id="@+id/editText_signup_reenterpassword"
        android:layout_width="361dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:autofillHints=""
        android:backgroundTint="#AEAEAE"
        android:ems="10"
        android:inputType="text"
        android:text="@string/re_enter_password"
        android:textColor="#AEAEAE" />

    <Button
        android:id="@+id/button_signup_signup"
        android:layout_width="357dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:text="@string/sign_up"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_signup_alreadyhaveaccount"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/already_have_an_account_click_here"
        android:textColor="#1DA2BF" />
</LinearLayout>